--- a/Note/res/values/strings.xml
+++ b/Note/res/values/strings.xml
@@ -1,5 +1,7 @@
 <resources>
 
     <string name="app_name">Note</string>
-
+	<string name="sort">分类</string>
+	<string name="confirm">确定</string>
+	<string name="cancle">取消</string>
 </resources>
