--- a/Note/res/values/strings.xml
+++ b/Note/res/values/strings.xml
@@ -5,4 +5,5 @@
 	<string name="confirm">确定</string>
 	<string name="cancle">取消</string>
 	<string name="tip_text">是否保存?</string>
+	<string name="not_be_null">分类名不能为空</string>
 </resources>
