--- a/Note/res/values/strings.xml
+++ b/Note/res/values/strings.xml
@@ -7,6 +7,7 @@
 	<string name="tip_text">是否保存?</string>
 	<string name="not_be_null">分类名不能为空</string>
 	<string name="is_exists">分类名已存在</string>
+	<string name="delete_tip">确定要删除吗?</string>
 	
 	<string name="remind">日常提醒</string>
 	<string name="feeling">生活感想</string>
